# rust-ai-crypto-bot

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  ENV_UPDATE_GUIDE.md  HELIUS_CREDIT_RESCUE.md  IMPLEMENTATION_SUMMARY.md  MONITORING_GUIDE.md  QUICK_START.md  README.md  metrics_dump.txt  run_10hour_livemicro_test.sh  run_1hour_validation.sh  run_2hour_production.sh  run_2hour_test.sh  run_4hour_production.sh  run_4hour_verification.sh  run_live.sh
.cargo/: config.toml
core/: Cargo.toml
core/src/: lib.rs  math.rs  meteora.rs  orca.rs  pool_weight.rs  pump_fun.rs  raydium.rs  telemetry.rs
docs/: DEPLOYMENT_CODESPACES.md  DEPLOYMENT_ORACLE.md  DEPLOYMENT_VULTR.md  DEVNET_DRY_RUN.md  FUTURE_UPGRADES.md  PRODUCTION_RUNBOOK.md  PROJECT_PROGRESS.md  SETUP_ALERTS.md  STRATEGY.md  comprehensive_log_improvements.md  gemini.md  grafana_dashboard.json
docs/ADR/: 0000-adr-template.md  0001-pnl-feedback-loop.md  ADR-001-hexagonal-architecture-pattern.md  ADR-002-five-hop-arbitrage-strategy.md  ADR-003-graph-based-market-representation.md  ADR-004-ai-model-integration-onnx.md  ADR-005-jito-bundle-execution.md  ADR-006-data-collection-ai-training.md  ADR-007-price-impact-filtering.md  ADR-008-port-abstractions-dependency-inversion.md  ADR-009-simulation-mode-testing.md  ADR-010-tui-dashboard-design.md  ADR-011-automated-wallet-asset-management.md  ADR-012-real-time-websocket-market-listener.md  ADR-013-lazy-pool-key-fetching-and-caching.md  ADR-014-comprehensive-unit-testing-strategy.md  ADR-015-dev-to-mainnet-test-plan.md  ADR-016-async-safety-performance-tracking.md  ADR-017-graduated-risk-profitability-framework.md  ADR-018-production-readiness-roadmap.md  ADR-019-success-library-postgresql-feedback-loop.md  ADR-020-operations-usage-guide.md  ADR-021-observability-reliability-architecture.md  ADR-022-orca-whirlpool-clmm-integration.md  ADR-023-concentrated-liquidity-profit-optimization.md  ADR-023-helius-rpc-credit-optimization.md  ADR-024-high-alpha-discovery-dynamic-jito-tipping.md  README.md
engine/: Cargo.toml
engine/examples/: devnet_dry_run.rs  generate_keypair.rs
engine/src/: alerts.rs  birth_watcher.rs  builders.rs  capital_scaler.rs  config.rs  config_tests.rs  devnet_keys.rs  discovery.rs  geyser_listener.rs  intelligence.rs  listener.rs  main.rs  metrics.rs  pool_fetcher.rs  recorder.rs  risk.rs  rpc_pool.rs  scoring.rs  simulation.rs  telemetry.rs  tui.rs  wallet_manager.rs  watcher.rs
examples/: devnet_dry_run.rs
executor/: Cargo.toml
executor/src/: flash_loan.rs  jito.rs  jito_resilience_tests.rs  legacy.rs  lib.rs  meteora_builder.rs  orca_builder.rs  orca_tests.rs  pump_fun_builder.rs  raydium_builder.rs
libs/protobuf-src-stub/: Cargo.toml
libs/protobuf-src-stub/src/: lib.rs
logs/: LOG_INSIGHTS_20241229.md  bot.log.2025-12-22  production_summary_20251228_193937.md  production_summary_20251229_123718.md  run_analysis_20241229.md  validation_summary_20251229_005614.md
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: mojito_dashboard.json
monitoring/grafana/provisioning/dashboards/: mojito_dashboard.yaml
monitoring/grafana/provisioning/datasources/: prometheus.yaml
scripts/: activate_production.sh  analyze_patterns.sql  analyze_volatility.py  check_binaries.exp  check_build_health.exp  check_deps.exp  check_disk.exp  check_live_status.exp  check_oom.exp  check_processes.exp  check_protoc.exp  check_server_status.exp  check_swap.exp  cleanup_engine.sh  collect_live_data.sh  deploy_and_ignition.exp  deploy_oracle.sh  deploy_vultr.sh  diagnostic_check.sh  export_success_library.py  fix_and_resume_build.exp  fix_env_vultr.exp  init_db.sql  inspect_config.exp  launch_production.sh  launch_tui.sh  launch_tui_window.sh  library_metrics.py  manage_library.sh  migrate_pool_weights.sql  monitor_bot.sh  rebuild_sequential.exp  remote_deploy.exp  remote_setup.exp  remote_transfer.exp  repair_protoc.exp  requirements.txt  resume_build.exp  run_24h_validation.sh  run_2h_test.sh  (+17 more)
scripts/migrations/: 001_add_ml_fields.sql
strategy/: Cargo.toml
strategy/src/: adapters.rs  arb.rs  graph.rs  hft_tests.rs  lib.rs  ports.rs  profit_sanity_tests.rs
strategy/src/analytics/: mod.rs  performance.rs  volatility.rs
strategy/src/safety/: mod.rs  token_validator.rs  token_validator_tests.rs
strategy/src/safety/token_validator/checks/: authorities.rs  holder_distribution.rs  liquidity_depth.rs  lp_status.rs  mod.rs
