[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
mev-core = { path = "../core" }
strategy = { path = "../strategy" }
executor = { path = "../executor" }

tokio = { version = "1.36", features = ["full"] }
crossbeam = "0.8"
solana-client = "1.17"
solana-sdk = "1.17"
solana-transaction-status = "1.17"
jito-searcher-client = { path = "../libs/searcher-examples/searcher_client" }
jito-protos = { path = "../libs/searcher-examples/jito_protos" }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
polars = { version = "0.36", features = ["lazy", "parquet"] }
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
yellowstone-grpc-client = { version = "1.13", default-features = false }
num_cpus = "1.16"
solana-account-decoder = "1.17"
async-trait = "0.1"
dotenvy = "0.15"
chrono = "0.4"
config = "0.13"
csv-async = "1.2"
zeroize = "1.3"
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.14"
bs58 = "0.4"
rand = "0.8"
thiserror = "1.0"
ratatui = "0.26"
crossterm = "0.27"
tracing-appender = "0.2"
futures-util = "0.3.31"
serde_json = "1.0.146"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
base64 = "0.21"
spl-token = "=4.0.0"
spl-associated-token-account = "2.3.0"
anyhow = "1.0"
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.12"
lru = "0.12"  # LRU cache for blacklist optimization
borsh = "1.6.0"

[features]
default = []
simulation = []  # For devnet/testnet dry runs with minimal tips
production = []  # Enforces strict validation and production-grade settings
