[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
mev-core = { path = "../core" }
solana-client = "1.17"
solana-sdk = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.3"
jito-searcher-client = { path = "../libs/searcher-examples/searcher_client" }
jito-protos = { path = "../libs/searcher-examples/jito_protos" }
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
prost = "0.12"
tokio = { version = "1.36", features = ["full"] }
yellowstone-grpc-client = { version = "1.13", default-features = false }
tracing = "0.1"
anyhow = "1.0.100"
async-trait = "0.1.89"

