[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
mev-core = { path = "../core" }
polars = { version = "0.36", features = ["lazy", "parquet"] }
petgraph = "0.6"
tracing = "0.1"
ort = { version = "2.0.0-rc.9", features = ["ndarray"] }
ndarray = "0.16"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
solana-sdk = "1.17"
async-trait = "0.1"
thiserror = "1.0"
bytemuck = "1.14"
spl-associated-token-account = "2.0"
parking_lot = "0.12"    # Faster mutexes/locks than std::sync
smallvec = "1.11"       # Stack-allocated vectors for hot paths
chrono = "0.4"
spl-token = "4.0"
solana-client = "1.17"
